--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -46,7 +46,7 @@ const { width, height } = _.tryImageSize('/img/uploads/logo-preto-1.webp')
                 </li>
               <% } %>
               <% if (contacts.phone) { %>
-                <li>
+                <li style="color: #000 !important;">
                   <span class="footer__list-icon">
                     <i class="i-phone"></i>
                   </span>
@@ -62,7 +62,7 @@ const { width, height } = _.tryImageSize('/img/uploads/logo-preto-1.webp')
             <% } %>
             <% if (footer.contacts.email) { %>
               <li>
-                <a href="mailto:<%= contacts.email %>" target="_blank" rel="noopener">
+                <a href="mailto:<%= contacts.email %>" target="_blank" rel="noopener" style="color: #000 !important;">
                   <%= contacts.email %>
                 </a>
               </li>
@@ -126,8 +126,8 @@ const { width, height } = _.tryImageSize('/img/uploads/logo-preto-1.webp')
         
   <img
     id="logo"
-    class="header__logo footer__logo"
-    src="/img/uploads/logo-preto-1.webp"
+    class="header__logo footer__logo" style="margin-left: -12px; margin-bottom: 20px;"
+    src="/img/uploads/logo-preto-1.png"
     alt="Logo"
     <% if (width) { %>
       width="<%= width %>"
