--- a/template/pages/@/sections/info-bar.ejs
+++ b/template/pages/@/sections/info-bar.ejs
@@ -24,7 +24,7 @@ const barCols = []
               <span class="rounded-icon">
                 <i class="i-<%= icon %>"></i>
               </span>
-              <div class="ml-2 ml-md-3">
+              <div class="">
                 <% if(title) { %>
                   <div class="info-bar__title">
                     <h3>
