--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -468,3 +468,6 @@
     width: 100%;
   } 
 }
+
+.header__toggler-icon, .header__toggler-icon+span { color: #000 !important;}
+.menu__item { color: #000 !important;}
